--- a/.github/workflows/cpcs.yml
+++ b/.github/workflows/cpcs.yml
@@ -14,7 +14,7 @@ jobs:
         - uses: actions/checkout@v4
         - name: CPCS get rules
           run: |
-            wget https://raw.githubusercontent.com/ClassicPress/ClassicPress-Coding-Standards/main/phpcs.xml
+            wget -O phpcs.xml https://raw.githubusercontent.com/ClassicPress/ClassicPress-Coding-Standards/main/phpcs.xml
             sed -i '/^\t<!-- start config -->.*/a\
               <file>.</file>
               ' phpcs.xml
